--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Display-flex</title>
 </head>
 
@@ -15,8 +16,22 @@
 <body>
     <header>
         <div class="header-container">
-            <a href="index.html"><img src="images/logo.svg" alt="logo"></a>
-            <nav>
+            <a class="nav-icon" href="index.html"><img src="images/logo.svg" alt="logo"></a>
+            <div class="dropdown">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+                <div class="dropdown-content">
+                    <nav class="">
+                        <ul>
+                            <li class="nav-li"> <a href="index.html" target="_blank">home</a></li>
+                            <li class="nav-li"> <a href="#" target="_blank">portfolio</a></li>
+                            <li class="nav-li"> <a href="#" target="_blank">about</a></li>
+                            <li class="nav-li"> <a href="#" target="_blank">blog</a></li>
+                            <li class="nav-li"> <a href="#" target="_blank">contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <nav class="nav">
                 <ul>
                     <li class="nav-li"> <a href="index.html" target="_blank">home</a></li>
                     <li class="nav-li"> <a href="#" target="_blank">portfolio</a></li>
@@ -27,7 +42,7 @@
             </nav>
         </div>
     </header>
-    <section>
+    <!-- <section>
         <div class="section1-container">
             <div class="div-1">
                 <h2 class="h2">Provide You best Best Ui Service </h2>
@@ -41,9 +56,9 @@
                 <img src="images/undraw_pair_programming_njlp.jpg" alt="image" class="image">
             </div>
         </div>
-    </section>
-    <section>
-        <div class="section2-container">
+    </section> -->
+    <!-- <section>
+         <div class="section2-container">
             <div class="title">
                 <h4 class="h4">OUR SERVICES</h4>
                 <h3 class="h3-2">We Provide Best Quality Service </h3>
@@ -102,7 +117,7 @@
 
         </div>
 
-    </section>
+    </section> -->
 </body>
 
 </html>
