--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </nav>
         </div>
     </header>
-    <!-- <section>
+    <section>
         <div class="section1-container">
             <div class="div-1">
                 <h2 class="h2">Provide You best Best Ui Service </h2>
@@ -56,9 +56,9 @@
                 <img src="images/undraw_pair_programming_njlp.jpg" alt="image" class="image">
             </div>
         </div>
-    </section> -->
-    <!-- <section>
-         <div class="section2-container">
+    </section>
+    <section>
+        <div class="section2-container">
             <div class="title">
                 <h4 class="h4">OUR SERVICES</h4>
                 <h3 class="h3-2">We Provide Best Quality Service </h3>
@@ -117,7 +117,7 @@
 
         </div>
 
-    </section> -->
+    </section>
 </body>
 
 </html>
